[metadata]
name = pyuvm-raysalemi
version = 2.0a
author = Ray Salemi
author_email = ray@raysalemi.com
description = Python Implementation of Universal Verification Methodology using cocotb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =https://github.com/pyuvm/pyuvm
    Bug Tracker = https://github.com/pyuvm/pyuvm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = pyuvm
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyuvm
