[metadata]
name = pyuvm
version = 2.0a0
author = Ray Salemi
author_email = ray@raysalemi.com
description = Python implementation of the Universal Verification Methodology (UVM) using cocotb
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls=
   Bug Tracker=https://github.com/pyuvm/pyuvm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = pyuvm
packages = find:
python_requires = >=3.6
		 
install_requires =
 cocotb >= 1.5.2
 
[options.packages.find]
where = pyuvm

